--- a/labs/01_Array_manipulation.ipynb
+++ b/labs/01_Array_manipulation.ipynb
@@ -8,7 +8,8 @@
         "i51GvUnwSc0U"
       ],
       "toc_visible": true,
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Akares0/ML/blob/main/labs/01_Array_manipulation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -250,7 +261,7 @@
       },
       "source": [
         "# Basic tensor creation from python lists\n",
-        "a = np.array([[1, 2, 3], [4, 5, 6]], dtype=np.int32)\n",
+        "a = np.array([[-1, 2, 3], [4, 5, 6]], dtype=np.int32)\n",
         "a"
       ],
       "execution_count": 8,
