Creato con Colab

--- a/labs/01_Array_manipulation.ipynb
+++ b/labs/01_Array_manipulation.ipynb
@@ -257,72 +257,140 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "941dfd6d-05cb-4a55-d6e5-e9e98f82bbc5"
+        "outputId": "3d13b521-20e3-457d-9aaf-6dec0409bbd7"
       },
       "source": [
         "# Basic tensor creation from python lists\n",
-        "a = np.array([[-1, 2, 3], [4, 5, 6]], dtype=np.int32)\n",
+        "a = np.array([[-2147483648, 2, 3], [4, 5, 6]], dtype=np.int32) #max_int 2^31\n",
         "a"
       ],
-      "execution_count": 8,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[1, 2, 3],\n",
-              "       [4, 5, 6]], dtype=int32)"
+              "array([[-2147483648,           2,           3],\n",
+              "       [          4,           5,           6]], dtype=int32)"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 15
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5LNGnqk3VbkU"
+        "id": "5LNGnqk3VbkU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "278fb158-ea16-4208-fad3-cde921350fb6"
       },
       "source": [
         "# Some other tensor construction methods\n",
         "np.zeros((3, 5))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8et3bE93WLBR"
+        "id": "8et3bE93WLBR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "72fb222e-c759-4bec-e932-86589f0da3bd"
       },
       "source": [
         "np.ones((2, 5), dtype=np.float64)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "v2Ehsm4WcML0"
+        "id": "v2Ehsm4WcML0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "04826b55-7633-4e3a-fdd0-bf041a105397"
       },
       "source": [
         "np.eye(4)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0.],\n",
+              "       [0., 0., 1., 0.],\n",
+              "       [0., 0., 0., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jokiBKanWFIE"
+        "id": "jokiBKanWFIE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "20c6c28b-4abc-4499-d3fd-192093841016"
       },
       "source": [
-        "np.random.rand(2, 3)  # from which distribution are these random numbers sampled? Check the Numpy documentation"
+        "from numpy import random  as nrd\n",
+        "nrd.rand(2, 3)  # from which distribution are these random numbers sampled? Check the Numpy documentation"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.54986838, 0.91387469, 0.00219052],\n",
+              "       [0.18666689, 0.17803834, 0.09921725]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -336,25 +404,58 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DHV8h3LVWRaI"
+        "id": "DHV8h3LVWRaI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f841d503-b485-4aa3-9c09-9f89f2e0309f"
       },
       "source": [
         "np.random.randint(0, 100, (3, 4))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[85, 51, 57, 20],\n",
+              "       [27, 16, 50, 86],\n",
+              "       [ 5, 72, 78, 88]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zsf9dn4CWl2V"
+        "id": "zsf9dn4CWl2V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fd5a49d1-5033-46ba-bafd-b913588f09b1"
       },
       "source": [
-        "t = np.random.rand(2, 3)\n",
-        "np.ones_like(t)"
+        "t = np.random.rand(2, 3) #Di base rand crea valori in 0,1 tipo float / non posso imporre un dtype\n",
+        "np.ones_like(t) #np.ones mantiene il dtype insito in rand ma impone come valore 1 / posso imporre un dtype"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1.],\n",
+              "       [1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -387,19 +488,42 @@
     {
       "cell_type": "code",
       "source": [
-        "# 📝 write your solution in this cell"
+        "# 📝 write your solution in this cell\n",
+        "\n",
+        "M = np.ones((3,3), dtype = np.int32) + np.eye(3, dtype = np.int32)\n",
+        "M"
       ],
       "metadata": {
-        "id": "pAnntNcu9otu"
+        "id": "pAnntNcu9otu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "40d5ee99-94f7-49f6-f320-407c89841dfd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2, 1, 1],\n",
+              "       [1, 2, 1],\n",
+              "       [1, 1, 2]], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "A2tjmfWbYk9P",
-        "cellView": "form"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dc13d433-effc-4c04-9027-d794ab075272"
       },
       "source": [
         "# @title 👀 Solution\n",
@@ -407,8 +531,21 @@
         "\n",
         "np.ones((3, 3)) + np.eye(3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2., 1., 1.],\n",
+              "       [1., 2., 1.],\n",
+              "       [1., 1., 2.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -431,14 +568,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XP4CyRTmXYpd"
+        "id": "XP4CyRTmXYpd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89426398-f494-4150-9333-db2e2fa95713"
       },
       "source": [
-        "t = np.random.rand(3, 3)\n",
+        "t = np.eye(3)\n",
         "t.dtype"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -453,14 +605,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PjuSpqbvXbqs"
+        "id": "PjuSpqbvXbqs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f985f0c1-d2ff-4aea-cf28-7ad19e1bff36"
       },
       "source": [
         "t = np.random.rand(3, 5)\n",
-        "t.shape"
+        "t.shape[1]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -476,17 +643,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_GJinHgLzs11"
+        "id": "_GJinHgLzs11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "03a17760-e0ea-4c96-e884-46be00115427"
       },
       "source": [
         "# Exercise variables\n",
         "X = np.random.rand(100, 42)\n",
         "\n",
         "# Your solution:\n",
-        "# Y = ?"
+        "# # Y = ?\n",
+        "X = np.ones_like(X)\n",
+        "a = X[:X.shape[0], :3].copy()\n",
+        "a.shape\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(100, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 124
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -497,7 +683,6 @@
         "np.ones((X.shape[0], 3))"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "A_UxL8zE-n8z"
       },
       "execution_count": null,
