Creato con Colab

--- a/labs/01_Array_manipulation.ipynb
+++ b/labs/01_Array_manipulation.ipynb
@@ -2959,7 +2959,8 @@
         "\n",
         "m #rombo\n",
         "\n",
-        "\n",
+        "m[:,1] = m[1,:] = 1\n",
+        "m\n",
         "\n"
       ],
       "metadata": {
@@ -2967,25 +2968,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "92WigPuF0HTT",
-        "outputId": "687eac72-7efd-49a1-c953-d4d4e4096b59"
+        "outputId": "372186a0-9923-42ea-b9fb-53342bd1a177"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[  0.,   0.,   0., 444.,   0.,   0.,   0.],\n",
-              "       [  0.,   0., 444.,   0., 444.,   0.,   0.],\n",
-              "       [  0., 444.,   0.,   0.,   0., 444.,   0.],\n",
-              "       [444.,   0.,   0.,   0.,   0.,   0., 444.],\n",
-              "       [  0., 444.,   0.,   0.,   0., 444.,   0.],\n",
-              "       [  0.,   0., 444.,   0., 444.,   0.,   0.],\n",
-              "       [  0.,   0.,   0., 444.,   0.,   0.,   0.]])"
+              "array([[  0.,   1.,   0., 444.,   0.,   0.,   0.],\n",
+              "       [  1.,   1.,   1.,   1.,   1.,   1.,   1.],\n",
+              "       [  0.,   1.,   0.,   0.,   0., 444.,   0.],\n",
+              "       [444.,   1.,   0.,   0.,   0.,   0., 444.],\n",
+              "       [  0.,   1.,   0.,   0.,   0., 444.,   0.],\n",
+              "       [  0.,   1., 444.,   0., 444.,   0.,   0.],\n",
+              "       [  0.,   1.,   0., 444.,   0.,   0.,   0.]])"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 3
         }
       ]
     },
@@ -3005,66 +3006,183 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CqLGPTtlu22k"
+        "id": "CqLGPTtlu22k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aeff0cd3-f9ea-4e52-c527-733464c71aa1"
       },
       "source": [
         "a = np.arange(12).reshape(3, 4)\n",
         "a, a.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[ 0,  1,  2,  3],\n",
+              "        [ 4,  5,  6,  7],\n",
+              "        [ 8,  9, 10, 11]]),\n",
+              " (3, 4))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u2vHVDozvCag"
+        "id": "u2vHVDozvCag",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3f3209a9-5151-4811-aba6-0da3f92aa007"
       },
       "source": [
         "# Rank-1 view of the second row of a\n",
         "row_r1 = a[1, :]\n",
         "row_r1, row_r1.shape  # notice the size of the resulting tensor, which is now lower than the original tensor"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([4, 5, 6, 7]), (4,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CTsk6eG325Ib"
+        "id": "CTsk6eG325Ib",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "adab7a26-6f4e-4f5b-e519-80d9ee959e97"
       },
       "source": [
         "# Rank-2 view of the second row of a\n",
         "row_r2 = a[1:2, :]\n",
         "row_r2, row_r2.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[[ 9, 10, 11],\n",
+              "         [12, 13, 14],\n",
+              "         [15, 16, 17]]]),\n",
+              " (1, 3, 3))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.arange(27).reshape(3,3,3)\n",
+        "a[1:2,:,0:1] #mantiene solo l'involucro"
+      ],
+      "metadata": {
+        "id": "75x1jb4XrqlL",
+        "outputId": "4d58a18e-5f5d-47e9-e0f5-7641bc2f9af5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 9],\n",
+              "        [12],\n",
+              "        [15]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zUVPrn7l3A5j"
+        "id": "zUVPrn7l3A5j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "11776ff7-b3c6-47d4-d7d4-952c80eb58ae"
       },
       "source": [
         "# Rank-2 view of the second row of a\n",
-        "row_r3 = a[[1], :]\n",
+        "row_r3 = a[[1], :] #PRESERVA la struttura\n",
         "row_r3, row_r3.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[[ 9, 10, 11],\n",
+              "         [12, 13, 14],\n",
+              "         [15, 16, 17]]]),\n",
+              " (1, 3, 3))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TL0qs9Gw3Mfu"
+        "id": "TL0qs9Gw3Mfu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5968e0d9-c078-4aff-c374-6cd07769fb43"
       },
       "source": [
         "# Same with the columns\n",
         "print(a[:, 1])\n",
         "print(a[:, [1]])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 3  4  5]\n",
+            " [12 13 14]\n",
+            " [21 22 23]]\n",
+            "[[[ 3  4  5]]\n",
+            "\n",
+            " [[12 13 14]]\n",
+            "\n",
+            " [[21 22 23]]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3086,7 +3204,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3D8qk7q0xUAb"
+        "id": "3D8qk7q0xUAb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "448e09d9-c7d2-43e6-c53d-6fd6cb8e0c6f"
       },
       "source": [
         "# The signature follows the same pattern as above: (begin, end, step)\n",
@@ -3094,19 +3216,45 @@
         "s1 = slice(3)  # equivalent to the slice [:3]\n",
         "s1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "slice(None, 3, None)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fMqp5ZCEp8uu"
+        "id": "fMqp5ZCEp8uu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "847be30b-bb33-43dd-9b87-1f9684cb23a6"
       },
       "source": [
         "type(s1)  # Slice is a python built-in type!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "slice"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3125,14 +3273,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JWr9dLVqxziR"
+        "id": "JWr9dLVqxziR",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "515b845b-f7cd-438e-bf4f-56f3cb22a5ba"
       },
       "source": [
         "mystring = 'this is just a string'\n",
         "mystring[s1]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'thi'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3173,19 +3340,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8yJ7eft44Shf"
+        "id": "8yJ7eft44Shf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b213ae3e-1dcf-4872-bd27-3f127494fe75"
       },
       "source": [
         "a = np.arange(1, 7).reshape(3, 2)\n",
         "a, a.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[1, 2],\n",
+              "        [3, 4],\n",
+              "        [5, 6]]),\n",
+              " (3, 2))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YDGTkvIQ4qaO"
+        "id": "YDGTkvIQ4qaO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e2797a0d-ecd3-499a-9827-d1c71f370805"
       },
       "source": [
         "# Example of integer array indexing\n",
@@ -3193,8 +3382,19 @@
         "b = a[[0, 1, 2], [0, 1, 0]]\n",
         "b, b.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([1, 4, 5]), (3,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3226,7 +3426,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NG8PUPue5ntQ"
+        "id": "NG8PUPue5ntQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5a734942-2c88-4bb1-c81b-8ccfefe76614"
       },
       "source": [
         "# You can use another tensor to perform the indexing,\n",
@@ -3234,25 +3438,55 @@
         "i = np.ones(3, dtype=np.int64)\n",
         "i"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yp--PCJN5uvA"
+        "id": "yp--PCJN5uvA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6eecaac-3ceb-4720-c86a-09b70a9b0828"
       },
       "source": [
         "j = np.array([0, 1, 0])\n",
         "j"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RrlnZbw25w3H"
+        "id": "RrlnZbw25w3H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5dc20c8f-a99c-4771-eac9-74c2efd9fc17"
       },
       "source": [
         "out = a[i, j]\n",
@@ -3260,8 +3494,19 @@
         "print(a)\n",
         "print(out)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2]\n",
+            " [3 4]\n",
+            " [5 6]]\n",
+            "[3 4 3]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
